Implemented rename and remove collision group. ref #671
Major refactoring too to make the operations take multiple args.

--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -109,7 +109,7 @@
          </activeWhen>
       </handler>
       <handler
-            class="com.dynamo.cr.tileeditor.commands.RenameCollisionGroup"
+            class="com.dynamo.cr.tileeditor.commands.RenameCollisionsGroup"
             commandId="org.eclipse.ui.edit.rename">
          <activeWhen>
             <reference
@@ -118,7 +118,7 @@
          </activeWhen>
       </handler>
       <handler
-            class="com.dynamo.cr.tileeditor.commands.RemoveCollisionGroup"
+            class="com.dynamo.cr.tileeditor.commands.RemoveCollisionsGroup"
             commandId="org.eclipse.ui.edit.delete">
          <activeWhen>
             <reference
