--- a/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr.editor/plugin.xml
@@ -394,5 +394,20 @@
                serviceClass="com.dynamo.cr.editor.services.IBranchService"></service>
       </serviceFactory>
    </extension>
-
+   <extension point="org.eclipse.ui.handlers">
+       <handler
+              class="com.dynamo.cr.editor.handlers.DisabledNewEditorHandler"
+              commandId="org.eclipse.ui.window.newEditor">
+           <enabledWhen>
+              <count value="-1">
+              </count>
+           </enabledWhen>
+           <activeWhen>
+              <not>
+                 <count value="-1">
+                 </count>
+              </not>
+          </activeWhen>
+        </handler>
+     </extension>
 </plugin>
