Menu reorganization * Moved editor specific menu to top-level * Show menu only when editor is active

--- a/com.dynamo.cr.contenteditor/plugin.xml
+++ b/com.dynamo.cr.contenteditor/plugin.xml
@@ -184,45 +184,50 @@
          point="org.eclipse.ui.menus">
       <menuContribution
             allPopups="false"
-            locationURI="menu:com.dynamo.cr.editor.menus.tools?after=com.dynamo.cr.editor.menus.launch">
-         <separator
-               name="com.dynamo.cr.contenteditor.separators.toolsStart"
-               visible="true">
-         </separator>
-         <command
-               commandId="com.dynamo.cr.contenteditor.commands.parent"
-               icon="icons/bricks.png"
-               label="Parent"
-               style="push">
-         </command>
-         <command
-               commandId="com.dynamo.cr.contenteditor.commands.unparent"
-               icon="icons/brick.png"
-               label="Unparent"
-               style="push">
-         </command>
-         <command
-               commandId="com.dynamo.cr.contenteditor.commands.addgameobject"
-               icon="icons/add_att_16x16.gif"
-               label="Add GameObject"
-               style="push">
-         </command>
-         <command
-               commandId="com.dynamo.cr.contenteditor.commands.addsubcollection"
-               icon="icons/add_att_16x16.gif"
-               label="Add Subcollection"
-               style="push">
-         </command>
-         <command
-               commandId="com.dynamo.cr.contenteditor.commands.resetCamera"
-               label="Reset Camera"
-               style="push">
-         </command>
-         <command
-               commandId="com.dynamo.cr.contenteditor.commands.frameObjects"
-               label="Frame Objects"
-               style="push">
-         </command>
+            locationURI="menu:org.eclipse.ui.main.menu?after=edit">
+         <menu
+               label="Collection">
+            <command
+                  commandId="com.dynamo.cr.contenteditor.commands.parent"
+                  icon="icons/bricks.png"
+                  label="Parent"
+                  style="push">
+            </command>
+            <command
+                  commandId="com.dynamo.cr.contenteditor.commands.unparent"
+                  icon="icons/brick.png"
+                  label="Unparent"
+                  style="push">
+            </command>
+            <command
+                  commandId="com.dynamo.cr.contenteditor.commands.addgameobject"
+                  icon="icons/add_att_16x16.gif"
+                  label="Add GameObject"
+                  style="push">
+            </command>
+            <command
+                  commandId="com.dynamo.cr.contenteditor.commands.addsubcollection"
+                  icon="icons/add_att_16x16.gif"
+                  label="Add Subcollection"
+                  style="push">
+            </command>
+            <command
+                  commandId="com.dynamo.cr.contenteditor.commands.resetCamera"
+                  label="Reset Camera"
+                  style="push">
+            </command>
+            <command
+                  commandId="com.dynamo.cr.contenteditor.commands.frameObjects"
+                  label="Frame Objects"
+                  style="push">
+            </command>
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="com.dynamo.cr.contenteditor.definitions.collectionEditorActive">
+               </reference>
+            </visibleWhen>
+         </menu>
       </menuContribution>
       <menuContribution
             allPopups="false"
