--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -250,6 +250,13 @@
                   label="Reset Zoom"
                   style="push">
             </command>
+            <menu
+                  label="Collision Groups">
+               <dynamic
+                     class="com.dynamo.cr.tileeditor.CollisionGroupsContributionItem"
+                     id="com.dynamo.cr.tileeditor.dynamics.collisionGroups">
+               </dynamic>
+            </menu>
             <visibleWhen
                   checkEnabled="false">
                <reference
@@ -280,8 +287,7 @@
                label="Delete"
                style="push">
          </command>
-      </menuContribution>
-   </extension>
+      </menuContribution>  </extension>
    <extension
          point="org.eclipse.ui.handlers">
       <handler
